--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,106 @@
+:root {
+  --main-bg-colour: #363636;
+  --board-cell-colour: #252525;
+  --ship-hit-colour: #ff0000;
+  --water-colour: #05a5d6;
+  --ship-colour: #FFFFFF;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 html {
-  background-color: #0d1117;
+  height: 100%;
+
+  color: white;
+  background-color: var(--main-bg-colour);
+}
+
+body {
+  height: 100%;
+
+  box-sizing: border-box;
+  font-family: -apple-system, 
+  BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen",
+  "Ubuntu","Cantarell","Fira Sans","Droid Sans",
+  "Helvetica Neue",sans-serif;
+
+  display: grid;
+  grid-template-rows: 200px 1fr;
+}
+
+#header {
+  display: grid;
+  place-items: center;
+
+  text-shadow: #252525 4px 4px;
+}
+
+#board-container {
+  width: 100%;
+  display: grid;
+}
+
+#board-container #introduction {
+  display: grid;
+  grid-gap: 15px;
+
+  justify-self: center;
+  align-self: flex-start;
+
+  padding: 25px;
+
+  background-color: var(--board-cell-colour);
+  border-radius: 10px;
+
+  grid-template-rows: 45px 25px 45px;
+}
+
+#introduction .colour-info{
+  display: grid;
+  grid-auto-flow: column;
+  place-items: center;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+#introduction .colour-info > div {
+  font-weight: 600;
+}
+#introduction .colour-info > .water {
+  color: var(--water-colour);
+}
+#introduction .colour-info > .ship { 
+  color: var(--ship-colour);
+}
+#introduction .colour-info > .hit {
+  color: var(--ship-hit-colour);
+}
+
+#introduction button {
+  color: white;
+  margin-top: 15px;
+  width: 80%;
+  justify-self: center;
+
+  background-color: var(--main-bg-colour);
+  border: none;
+  border-radius: 5px;
+  box-shadow: black 2px 2px 6px;
+
+  transition: 0.1s;
+}
+#introduction button:hover {
+  background-color:  white;
+  color: black;
+
+  transform: scale(1.05);
+  transition: 0.1s;
+}
+#introduction button:active {
+  transform: scale(0.95)
 }
