--- a/src/style.css
+++ b/src/style.css
@@ -120,12 +120,22 @@ body {
 .gameboard div#row {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
+  user-select: none;
 }
 .gameboard div#row > div {
   border: 1px solid #181818ab;
+  transition: 0.5s;
+}
+.gameboard div#row > div:hover {
+  transition: 0.15s ;
+  transform: scale(1.05);
+  border: 3px solid var(--board-cell-colour);
 }
 .gameboard div#row > .undiscovered {
   background-color: var(--board-cell-colour);
+}
+.gameboard div#row > .undiscovered:hover {
+  background-color: white;
 }
 .gameboard div#row > .water {
   background-color: var(--water-colour);
