fixed a bug allowing duplicate attacks

--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,8 @@ body {
   justify-self: center;
   align-self: flex-start;
 
+  grid-column: 1/-1;
+
   padding: 25px;
 
   background-color: var(--board-cell-colour);
